src/styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');

/* Base Elements */
* {
  font-family: 'Source Code Pro', monospace;
}

body {
  margin: 0;
}

hr {
  margin: 0 30px;
  border-color: #a0d2db;
}

h1 {
  font-size: 35px;
}

img {
  padding-left: 15px;
  cursor: pointer;
}

input {
  border: none;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  height: 30px;
  width: 200px;
  font-size: 20px;
  text-align: center;
  border-color: gray;
  margin-left: 0;
}

input:disabled {
  background-color: #9e9e9e;
  color: black;
}

input:focus {
  outline: none;
}

/* IDs */

#app {
  display: flex;
  flex-direction: column;
  height: 100vh;
  background-color: #2e2e3a;
  color: #ffffff;
  margin: 0;
  padding: 0;
}

/* Classes */
/* Header and Menu */
.header {
  display: flex;
  flex-direction: row;
}

.header-link {
  margin: 15px 30px;
  text-decoration: none;
  color: #a0d2db;
  font-size: 14px;
}

.menu-item {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 30px;
  border: 1px solid #a0d2db;
  border-radius: 20px;
  margin: 15px;
  height: 50px;
  width: 50px;
}

.header-link:hover {
  cursor: pointer;
}

.menu-item svg {
  font-size: 40px;
}

/*  */

.body {
  text-align: center;
  margin: auto;
}

.footer {
  text-align: center;
  color: #a0d2db;
}

.flex {
  display: flex;
}

.flex-1 {
  flex: 1;
}

.flex-center {
  justify-content: center;
  align-items: center;
}

.flex-column {
  flex-direction: column;
}

.conversion-block {
  /* width: 430px; */
  flex-direction: column;
  margin: auto;
  text-align: inherit;
}

.conversion-block>* {
  flex: 1;
  font-size: 20px;
}

.conversion-icons {
  margin-top: 20px;
}

.underline-text {
  text-decoration: underline;
}

.unit-label {
  cursor: pointer;
}

.dropdown {
  background-color: #1a1a25;
  border: 1px #000000 solid;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
  position: absolute;
  width: 100%;
  min-width: fit-content;
  font-size: 16px;
  z-index: 1;
}

.dropdown>p {
  margin: 5px 10px;
  cursor: pointer;
}

.dropdown>p:hover {
  text-decoration: underline;
}

.dropdown-arrow {
  border: solid #ffffff;
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
  transform: rotate(45deg);
  margin: auto;
}

.active-dropdown {
  color: #a0d2db;
}

.relative {
  position: relative;
}

.title {
  color: #a0d2db;
}

/* Margins & Paddings */
.margin-auto {
  margin: auto;
}

.margin-right-5 {
  margin-right: 5px;
}

.margin-left-5 {
  margin-left: 5px;
}

/* Media Queries */
@media screen and (min-width: 500px) {
  input {
    margin-left: 30px;
  }
  
  .conversion-block {
    flex-direction: row;
    text-align: left;
  }
  
  .conversion-icons {
    margin-top: 5px;
  }
}

